--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     </div>
       <footer class="footer">
         <div class="container text-center">
-          <span>examplewebsite.com</span>
+          <span>White Coat Culture</span>
         </div>
       </footer>
 
